syntax = "proto3";

package grpcproto;

message notifyMessage {
    string userID = 1;
    int64 createdTime = 2;
    string title = 3;
    string message = 4;
}
message getNotifyResponse {
    repeated notifyMessage notifications = 1;
}

message getNotifyRequest{
    int32 limit = 1;
    int32 offset = 2;
}

message UserToken {
    string UserID = 1;
    string Token = 2;
}

service notify {
    rpc getNotify (getNotifyRequest) returns (getNotifyResponse);
    rpc AddUserToken(AddUserTokenReq) returns (AddUserTokenResp);
    rpc PushNotif(PushNotifyReq) returns(PushNotifyResp);
}

message AddUserTokenReq {
    UserToken UserToken = 1;
}

message AddUserTokenResp {
    uint32 Code = 1;
}

message PushNotifReq {
    notifyMessage Notification = 1;
}

message PushNotifyResp {
    uint32 Code = 1;
}

